SF-Custom-Objects/salesforce_ant_46.0/sample/retrieveUnpackaged/objects/UserRole__c.object
<CustomObject>
    <fields>
        <fullName>Approve_Request_Submission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approve Request Submission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approve__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Review</label>
        <type>Checkbox</type>
    </fields>
    <label>UserRole</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Roles Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UserRole</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>